--- a/gateway-microservice/src/main/resources/application.properties
+++ b/gateway-microservice/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 %prod.kafka.bootstrap.servers=127.0.0.1:9094
 kafka.bootstrap.servers=127.0.0.1:9094
-mp.messaging.incoming.dispatch_topic.connector=smallrye-kafka
+mp.messaging.incoming.gateway_topic.connector=smallrye-kafka
 mp.messaging.outgoing.auth_topic.connector=smallrye-kafka
