--- a/gateway-microservice/build.gradle
+++ b/gateway-microservice/build.gradle
@@ -16,6 +16,7 @@ dependencies {
     implementation 'io.quarkus:quarkus-kotlin'
     implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk8'
     implementation 'io.quarkus:quarkus-arc'
+    implementation 'com.google.code.gson:gson:2.10.1'
     testImplementation 'io.quarkus:quarkus-junit5'
 }
 
