--- a/dispatch-microservice/src/main/resources/application.properties
+++ b/dispatch-microservice/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 %prod.kafka.bootstrap.servers=127.0.0.1:9094
 kafka.bootstrap.servers=127.0.0.1:9094
 mp.messaging.incoming.dispatch_topic.connector=smallrye-kafka
+mp.messaging.incoming."users-microservice.public.Outbox".connector=smallrye-kafka
+mp.messaging.outgoing.gateway_topic.connector=smallrye-kafka
