--- a/users-microservice/src/main/resources/application.properties
+++ b/users-microservice/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-%prod.kafka.bootstrap.servers=127.0.0.1:9094
+%prod.kafka.bootstrap.servers=kafka:9092
 kafka.bootstrap.servers=127.0.0.1:9094
 mp.messaging.incoming.users_topic.connector=smallrye-kafka
 mp.messaging.outgoing.dispatch_topic.connector=smallrye-kafka
@@ -7,6 +7,7 @@ quarkus.datasource.db-kind=postgresql
 quarkus.datasource.username=costi
 quarkus.datasource.password=password
 
+%prod.quarkus.datasource.jdbc.url=jdbc:postgresql://postgres-users:5432/app-users
 quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/app-users
 quarkus.datasource.jdbc.max-size=16
 quarkus.hibernate-orm.database.generation=update
