--- a/auth-microservice/src/main/resources/application.properties
+++ b/auth-microservice/src/main/resources/application.properties
@@ -2,3 +2,12 @@
 kafka.bootstrap.servers=127.0.0.1:9094
 mp.messaging.incoming.auth_topic.connector=smallrye-kafka
 mp.messaging.outgoing.dispatch_topic.connector=smallrye-kafka
+
+quarkus.datasource.db-kind=postgresql
+quarkus.datasource.username=costi
+quarkus.datasource.password=password
+
+%prod.quarkus.datasource.jdbc.url=jdbc:postgresql://postgres-auth:5432/app-auth
+quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5433/app-auth
+quarkus.datasource.jdbc.max-size=16
+quarkus.hibernate-orm.database.generation=update
