--- a/users-microservice/gradle.properties
+++ b/users-microservice/gradle.properties
@@ -1,6 +1,7 @@
 #Gradle properties
+#Sun Feb 25 20:10:48 EET 2024
+quarkusPlatformArtifactId=quarkus-bom
+quarkusPlatformGroupId=io.quarkus.platform
+quarkusPlatformVersion=3.7.2
 quarkusPluginId=io.quarkus
 quarkusPluginVersion=3.7.2
-quarkusPlatformGroupId=io.quarkus.platform
-quarkusPlatformArtifactId=quarkus-bom
-quarkusPlatformVersion=3.7.2
