--- a/auth-microservice/src/main/resources/application.properties
+++ b/auth-microservice/src/main/resources/application.properties
@@ -1,7 +1,10 @@
-%prod.kafka.bootstrap.servers=127.0.0.1:9094
+quarkus.http.port=8081
+
+%prod.kafka.bootstrap.servers=kafka:9092
 kafka.bootstrap.servers=127.0.0.1:9094
 mp.messaging.incoming.auth_topic.connector=smallrye-kafka
 mp.messaging.outgoing.dispatch_topic.connector=smallrye-kafka
+mp.messaging.outgoing.gateway_topic.connector=smallrye-kafka
 
 quarkus.datasource.db-kind=postgresql
 quarkus.datasource.username=costi
@@ -11,3 +14,10 @@ quarkus.datasource.password=password
 quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5433/app-auth
 quarkus.datasource.jdbc.max-size=16
 quarkus.hibernate-orm.database.generation=update
+
+jwt.issuer.hash=aA4Jp5S2MerK7cByRg9kZXDw
+
+mp.jwt.verify.publickey.location=publicKey.pem
+quarkus.native.resources.includes=publicKey.pem
+
+smallrye.jwt.sign.key.location=privateKey.pem
