--- a/dispatch-microservice/gradle.properties
+++ b/dispatch-microservice/gradle.properties
@@ -1,6 +1,7 @@
 #Gradle properties
+#Tue Feb 27 20:50:05 EET 2024
+quarkusPlatformArtifactId=quarkus-bom
+quarkusPlatformGroupId=io.quarkus.platform
+quarkusPlatformVersion=3.7.3
 quarkusPluginId=io.quarkus
 quarkusPluginVersion=3.7.3
-quarkusPlatformGroupId=io.quarkus.platform
-quarkusPlatformArtifactId=quarkus-bom
-quarkusPlatformVersion=3.7.3
