--- a/dispatch-microservice/src/main/resources/application.properties
+++ b/dispatch-microservice/src/main/resources/application.properties
@@ -4,3 +4,8 @@ mp.messaging.incoming.dispatch_topic.connector=smallrye-kafka
 mp.messaging.incoming."users-microservice.public.Outbox".connector=smallrye-kafka
 mp.messaging.outgoing.gateway_topic.connector=smallrye-kafka
 mp.messaging.outgoing.auth_topic.connector=smallrye-kafka
+mp.messaging.outgoing.query_topic.connector=smallrye-kafka
+mp.messaging.outgoing.group_topic.connector=smallrye-kafka
+mp.messaging.outgoing.message_topic.connector=smallrye-kafka
+mp.messaging.outgoing.call_topic.connector=smallrye-kafka
+
