--- a/query-microservice/build.gradle
+++ b/query-microservice/build.gradle
@@ -15,6 +15,7 @@ dependencies {
     implementation 'io.quarkus:quarkus-kotlin'
     implementation 'io.quarkus:quarkus-mongodb-panache-kotlin'
     implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk8'
+    implementation 'io.quarkus:quarkus-container-image-docker'
     implementation 'io.quarkus:quarkus-arc'
     implementation 'com.google.code.gson:gson:2.10.1'
     implementation 'io.quarkus:quarkus-mongodb-panache-kotlin'
