--- a/query-microservice/src/main/resources/application.properties
+++ b/query-microservice/src/main/resources/application.properties
@@ -3,5 +3,5 @@ kafka.bootstrap.servers=127.0.0.1:9094
 mp.messaging.incoming.query_topic.connector=smallrye-kafka
 mp.messaging.outgoing.gateway_topic.connector=smallrye-kafka
 
-%prod.quarkus.mongodb.connection-string = mongodb://costi:1234@mongodb-query:27017/query?retryWrites=false
-quarkus.mongodb.connection-string = mongodb://costi:1234@localhost:27017/query?retryWrites=false
+%prod.quarkus.mongodb.connection-string = mongodb://mongodb-query:27017/query?retryWrites=false
+quarkus.mongodb.connection-string = mongodb://localhost:27017/query?retryWrites=false
