--- a/gateway-microservice/src/main/resources/application.properties
+++ b/gateway-microservice/src/main/resources/application.properties
@@ -2,3 +2,6 @@
 kafka.bootstrap.servers=127.0.0.1:9094
 mp.messaging.incoming.gateway_topic.connector=smallrye-kafka
 mp.messaging.outgoing.auth_topic.connector=smallrye-kafka
+
+%prod.quarkus.redis.hosts=redis://redis-gateway:6379/0
+quarkus.redis.hosts=redis://localhost:6379/0
