--- a/gateway-microservice/build.gradle
+++ b/gateway-microservice/build.gradle
@@ -18,6 +18,8 @@ dependencies {
     implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk8'
     implementation 'io.quarkus:quarkus-arc'
     implementation 'com.google.code.gson:gson:2.10.1'
+    implementation 'io.quarkus:quarkus-redis-client'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.8.0'
     testImplementation 'io.quarkus:quarkus-junit5'
 }
 
