--- a/video-microservice/src/main/resources/application.properties
+++ b/video-microservice/src/main/resources/application.properties
@@ -1,2 +1,6 @@
+%prod.kafka.bootstrap.servers=kafka-2:9092
+kafka.bootstrap.servers=127.0.0.1:9098
+mp.messaging.outgoing.channel-video.connector=smallrye-kafka
+
 quarkus.http.port=8081
 quarkus.websocket.max-frame-size=1048576
