--- a/audio-microservice/src/main/resources/application.properties
+++ b/audio-microservice/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+%prod.kafka.bootstrap.servers=kafka-streaming:9092
+kafka.bootstrap.servers=127.0.0.1:9098
+mp.messaging.outgoing.channel-audio.connector=smallrye-kafka
+mp.messaging.incoming.audio_call_topic.connector=smallrye-kafka
+
 quarkus.http.port=8082
+
+%prod.quarkus.redis.hosts=redis://redis-audio:6379/0
+quarkus.redis.hosts=redis://localhost:6381/0
