--- a/dispatch-microservice/src/main/resources/application.properties
+++ b/dispatch-microservice/src/main/resources/application.properties
@@ -12,3 +12,10 @@ mp.messaging.outgoing.group_topic.connector=smallrye-kafka
 mp.messaging.outgoing.message_topic.connector=smallrye-kafka
 mp.messaging.outgoing.call_topic.connector=smallrye-kafka
 
+%prod.mp.messaging.outgoing.video_call_topic.bootstrap.servers=kafka-streaming:9092
+mp.messaging.outgoing.video_call_topic.bootstrap.servers=127.0.0.1:9098
+mp.messaging.outgoing.video_call_topic.connector=smallrye-kafka
+
+%prod.mp.messaging.outgoing.audio_call_topic.bootstrap.servers=kafka-streaming:9092
+mp.messaging.outgoing.audio_call_topic.bootstrap.servers=127.0.0.1:9098
+mp.messaging.outgoing.audio_call_topic.connector=smallrye-kafka
