--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,13 +12,13 @@ services:
     environment:
       - KAFKA_CFG_NODE_ID=0
       - KAFKA_CFG_PROCESS_ROLES=controller,broker
-      - KAFKA_CFG_CONTROLLER_QUORUM_VOTERS=0@<your_host>:9093
+      - KAFKA_CFG_CONTROLLER_QUORUM_VOTERS=0@kafka:9093
       - KAFKA_CFG_LISTENERS=PLAINTEXT://:9092,CONTROLLER://:9093,EXTERNAL://:9094
       - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://kafka:9092,EXTERNAL://localhost:9094
       - KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP=CONTROLLER:PLAINTEXT,EXTERNAL:PLAINTEXT,PLAINTEXT:PLAINTEXT
       - KAFKA_CFG_CONTROLLER_LISTENER_NAMES=CONTROLLER
-  kafka-2:
-    container_name: "kafka-2"
+  kafka-streaming:
+    container_name: "kafka-streaming"
     image: docker.io/bitnami/kafka:3.6
     ports:
       - "9096:9092"
@@ -26,9 +26,9 @@ services:
     volumes:
       - "kafka_data2:/bitnami"
     environment:
-      - KAFKA_CFG_NODE_ID=0
+      - KAFKA_CFG_NODE_ID=1
       - KAFKA_CFG_PROCESS_ROLES=controller,broker
-      - KAFKA_CFG_CONTROLLER_QUORUM_VOTERS=0@<your_host>:9093
+      - KAFKA_CFG_CONTROLLER_QUORUM_VOTERS=1@kafka-streaming:9093
       - KAFKA_CFG_LISTENERS=PLAINTEXT://:9092,CONTROLLER://:9093,EXTERNAL://:9094
       - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://kafka:9092,EXTERNAL://localhost:9094
       - KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP=CONTROLLER:PLAINTEXT,EXTERNAL:PLAINTEXT,PLAINTEXT:PLAINTEXT
@@ -122,6 +122,18 @@ services:
     ports:
       - '6379:6379'
     command: redis-server --save 20 1 --loglevel warning
+  redis-video:
+    container_name: 'redis-video'
+    image: redis:latest
+    ports:
+      - '6380:6379'
+    command: redis-server --save 20 1 --loglevel warning
+  redis-audio:
+    container_name: 'redis-audio'
+    image: redis:latest
+    ports:
+      - '6381:6379'
+    command: redis-server --save 20 1 --loglevel warning
   gateway-microservice:
     container_name: "gateway"
     image: constatin1215/gateway-ms:v1
@@ -136,14 +148,14 @@ services:
     ports:
       - "8081:8081"
     depends_on:
-      - kafka
+      - kafka-streaming
   audio-microservice:
     container_name: "audio-ms"
     image: constatin1215/audio-ms:v1
     ports:
       - "8082:8082"
     depends_on:
-      - kafka
+      - kafka-streaming
   users-microservice:
     container_name: "users-ms"
     image: constatin1215/users-ms:v1
@@ -161,6 +173,7 @@ services:
     image: constatin1215/dispatch-ms:v1
     depends_on:
       - kafka
+      - kafka-streaming
   query-microservice:
     container_name: "query-ms"
     image: constatin1215/query-ms:v1
