--- a/audio-microservice/build.gradle
+++ b/audio-microservice/build.gradle
@@ -12,13 +12,13 @@ repositories {
 dependencies {
     implementation enforcedPlatform("${quarkusPlatformGroupId}:${quarkusPlatformArtifactId}:${quarkusPlatformVersion}")
     implementation 'io.quarkus:quarkus-container-image-docker'
-    //implementation 'io.quarkus:quarkus-smallrye-reactive-messaging-kafka'
+    implementation 'io.quarkus:quarkus-smallrye-reactive-messaging-kafka'
     implementation 'io.quarkus:quarkus-websockets'
     implementation 'io.quarkus:quarkus-kotlin'
     implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk8'
     implementation 'io.quarkus:quarkus-arc'
     implementation 'com.google.code.gson:gson:2.10.1'
-    //implementation 'io.quarkus:quarkus-redis-client'
+    implementation 'io.quarkus:quarkus-redis-client'
     testImplementation 'io.quarkus:quarkus-junit5'
 }
 
