--- a/video-microservice/build.gradle
+++ b/video-microservice/build.gradle
@@ -18,7 +18,7 @@ dependencies {
     implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk8'
     implementation 'io.quarkus:quarkus-arc'
     implementation 'com.google.code.gson:gson:2.10.1'
-    //implementation 'io.quarkus:quarkus-redis-client'
+    implementation 'io.quarkus:quarkus-redis-client'
     testImplementation 'io.quarkus:quarkus-junit5'
 }
 
