--- a/video-microservice/src/main/resources/application.properties
+++ b/video-microservice/src/main/resources/application.properties
@@ -1,6 +1,10 @@
-%prod.kafka.bootstrap.servers=kafka-2:9092
+%prod.kafka.bootstrap.servers=kafka-streaming:9092
 kafka.bootstrap.servers=127.0.0.1:9098
 mp.messaging.outgoing.channel-video.connector=smallrye-kafka
+mp.messaging.incoming.video_call_topic.connector=smallrye-kafka
 
 quarkus.http.port=8081
 quarkus.websocket.max-frame-size=1048576
+
+%prod.quarkus.redis.hosts=redis://redis-video:6379/0
+quarkus.redis.hosts=redis://localhost:6380/0
