--- a/audio-microservice/src/main/resources/application.properties
+++ b/audio-microservice/src/main/resources/application.properties
@@ -2,6 +2,7 @@
 kafka.bootstrap.servers=127.0.0.1:9098
 mp.messaging.outgoing.channel-audio.connector=smallrye-kafka
 mp.messaging.incoming.audio_call_topic.connector=smallrye-kafka
+mp.messaging.outgoing.call_topic.connector=smallrye-kafka
 
 quarkus.http.port=8082
 
