--- a/video-microservice/src/main/resources/application.properties
+++ b/video-microservice/src/main/resources/application.properties
@@ -1,7 +1,9 @@
 %prod.kafka.bootstrap.servers=kafka-streaming:9092
 kafka.bootstrap.servers=127.0.0.1:9098
+
 mp.messaging.outgoing.channel-video.connector=smallrye-kafka
 mp.messaging.incoming.video_call_topic.connector=smallrye-kafka
+mp.messaging.outgoing.call_topic.connector=smallrye-kafka
 
 quarkus.http.port=8081
 quarkus.websocket.max-frame-size=1048576
